# MiniMax-01-Unofficial

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
configs/: default.yaml
scripts/: smoke_test.py
src/minimax_01_unofficial/: model.py
